updated banner section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <body class="lato">
     <header class="container mx-auto">
+      <!-- nav section -->
         <nav>
             <div class="navbar  md:bg-[#F85559] md:rounded-full mt-8 md:px-4 md:py-4">
                 <div class="navbar-center">
@@ -65,14 +66,14 @@
         </nav>
 
         <!-- banner section -->
-        <section class="mt-12 relative">
-          <div class="carousel w-full">
+        <section class="mt-12 relative mx-5 md:mx-0">
+          <div class="carousel w-full rounded-lg">
             <div id="slide1" class="carousel-item relative w-full">
-              <div class="hero min-h-[calc(100vh-180px)]" style="background-image: url(./images/banner1.png);">
+              <div class="hero min-h-[200px] md:min-h-[600px]" style="background-image: url(./images/banner1.png);">
                 <div class="hero-overlay bg-opacity-60 bg-black"></div>
                 <div class="hero-content text-center text-neutral-content">
-                  <div class="max-w-2xl">
-                    <h1 class="mb-5 text-4xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <div class="max-w-2xl lg:-mt-24">
+                    <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
                     <p class="mb-6">We supply highly quality organic products</p>
                     <button class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop Now</button>
                   </div>
@@ -84,11 +85,11 @@
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <div class="hero min-h-[calc(100vh-180px)]" style="background-image: url(./images/banner2.png);">
+              <div class="hero min-h-[200px] md:min-h-[600px]" style="background-image: url(./images/banner2.png);">
                 <div class="hero-overlay bg-opacity-60 bg-black"></div>
                 <div class="hero-content text-center text-neutral-content">
-                  <div class="max-w-2xl">
-                    <h1 class="mb-5 text-4xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <div class="max-w-2xl lg:-mt-24">
+                    <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
                     <p class="mb-6">We supply highly quality organic products</p>
                     <button class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop Now</button>
                   </div>
@@ -100,11 +101,11 @@
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <div class="hero min-h-[calc(100vh-180px)]" style="background-image: url(./images/banner3.png);">
+              <div class="hero min-h-[200px] md:min-h-[600px]" style="background-image: url(./images/banner3.png);">
                 <div class="hero-overlay bg-opacity-60 bg-black"></div>
                 <div class="hero-content text-center text-neutral-content">
-                  <div class="max-w-2xl">
-                    <h1 class="mb-5 text-4xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <div class="max-w-2xl lg:-mt-24">
+                    <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
                     <p class="mb-6">We supply highly quality organic products</p>
                     <button class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop Now</button>
                   </div>
@@ -116,11 +117,11 @@
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <div class="hero min-h-[calc(100vh-180px)]" style="background-image: url(./images/banner4.png);">
+              <div class="hero min-h-[200px] md:min-h-[600px ]" style="background-image: url(./images/banner4.png);">
                 <div class="hero-overlay bg-opacity-60 bg-black"></div>
                 <div class="hero-content text-center text-neutral-content">
-                  <div class="max-w-2xl">
-                    <h1 class="mb-5 text-4xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                  <div class="max-w-2xl lg:-mt-24">
+                    <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
                     <p class="mb-6">We supply highly quality organic products</p>
                     <button class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop Now</button>
                   </div>
@@ -132,7 +133,7 @@
               </div>
             </div>
           </div>
-          <div class="lg:grid lg:gap-24 lg:grid-cols-5 lg:justify-center lg:bg-white lg:max-w-5xl lg:mx-auto lg:px-16 lg:pt-12 absolute lg:-bottom-16 lg:left-28 lg:right-28 rounded-lg shadow-lg hidden">
+          <div class="lg:grid lg:gap-24 lg:grid-cols-5 lg:justify-center lg:bg-white lg:max-w-5xl lg:mx-auto h-[200px] lg:px-16 lg:pt-12 absolute lg:-bottom-24 lg:left-28 lg:right-28 rounded-lg shadow-lg hidden">
             <div>
               <img src="images/fruit1.png" alt="" class="mb-4 h-20">
               <p class="text-center md:text-sm text-lg font-medium">Grapes</p>
@@ -158,7 +159,11 @@
     </header>
 
     <main>
+      <!-- Deal of the day section -->
+      <section>
 
+
+      </section>
 
     </main>
 
