--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 </head>
 
 <body class="lato">
-  <header class="container mx-auto">
+  <header class="container mx-auto lato">
     <!-- nav section -->
     <nav>
-      <div class="navbar  md:bg-[#F85559] md:rounded-full mt-8 md:px-4 md:py-4 flex-row-reverse md:flex-col lg:flex-row justify-between">
+      <div
+        class="navbar  md:bg-[#F85559] md:rounded-full mt-8 md:px-4 md:py-4 flex-row-reverse md:flex-col lg:flex-row justify-between">
         <div class="navbar-center">
           <div class="dropdown dropdown-end">
             <label tabindex="0" class="btn btn-ghost md:hidden">
@@ -43,10 +44,10 @@
               <li><a>Shop</a></li>
               <li><a>All Fruits</a></li>
               <li><a><input type="text" placeholder="Search here"
-                class="input input-ghost w-full max-w-xs bg-white rounded-full md:hidden" />
-                <i class="fa-solid fa-magnifying-glass absolute right-7 md:hidden "></i></a>
+                    class="input input-ghost w-full max-w-xs bg-white rounded-full md:hidden" />
+                  <i class="fa-solid fa-magnifying-glass absolute right-7 md:hidden "></i></a>
               </li>
-              
+
             </ul>
           </div>
         </div>
@@ -60,10 +61,9 @@
           </ul>
         </div>
 
-        <div class="nav-center md:mb-5 lg:mb-0">
+        <div class="nav-center md:mb-5 lg:mb-0 lg:mr-24">
           <img src="images/logo.png" alt="" class="w-10 md:w-16">
-          <a
-            class="btn btn-ghost normal-case items-center text-black md:text-white text-xl  md:text-5xl font-bold">Fruit
+          <a class="btn btn-ghost normal-case items-center text-black md:text-white text-xl  md:text-5xl font-bold">Fruit
             Burst</a>
         </div>
 
@@ -106,7 +106,7 @@
                 <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
                 <p class="mb-6">We supply highly quality organic products</p>
                 <button
-                  class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop
+                  class="text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case px-8 py-5 rounded-lg  hover:bg-red-500">Shop
                   Now</button>
               </div>
             </div>
@@ -179,12 +179,208 @@
     </section>
   </header>
 
-  <main>
+  <main class="container mx-auto lato">
     <!-- Deal of the day section -->
     <section>
+      <div class="mt-6 lg:mt-48 lg:mb-12 flex flex-col lg:flex-row justify-between items-center text-center lg:text-left">
+        <div>
+          <h4 class="text-black text-2xl md:text-5xl font-extrabold mb-3">Deal of the day</h4>
+          <p class="text-slate-500 text-sm md:text-base w-64 md:w-96 lg:w-[600px] mb-3">
+            Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature
+            from 45 BC, making it over 2000 years old.
+          </p>
+        </div>
+        <div class="text-black">
+          <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-4xl md:text-5xl font-black">
+                <span style="--value:29;"></span>
+              </span>
+              days
+            </div>
+            <p class="mt-3 text-black"><i class="fa-solid fa-ellipsis-vertical"></i></p>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-4xl md:text-5xl font-black">
+                <span style="--value:15;"></span>
+              </span>
+              hours
+            </div>
+            <p class="mt-3 text-black"><i class="fa-solid fa-ellipsis-vertical"></i></p>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-4xl md:text-5xl font-black">
+                <span style="--value:25;"></span>
+              </span>
+              min
+            </div>
+            <p class="mt-3 text-black"><i class="fa-solid fa-ellipsis-vertical"></i></p>
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-4xl md:text-5xl font-black">
+                <span style="--value:08;"></span>
+              </span>
+              sec
+            </div>
+          </div>
+
+        </div>
 
 
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 md:gap-5 lg:grid-cols-4">
+        <div class="card bg-base-100 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit6.png" alt="Apples" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
+            <p class="text-slate-500 my-3">Apples</p>
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+            </div>
+            <!-- You can open the modal using ID.showModal() method -->
+            <button class="text-[#F85559] mt-4" onclick="my_modal_4.showModal()">Details</button>
+            <dialog id="my_modal_4" class="modal">
+              <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
+                <div class="flex justify-center"><img src="images/fruit6.png" alt="" class=""></div>
+                <h3 class="font-black my-5 text-black text-4xl">Apples</h3>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                </div>
+                <div class="modal-action justify-center">
+                  <!-- if there is a button, it will close the modal -->
+                  <button class="btn normal-case px-8 text-xl text-[#F85559] border-[#F85559]">Close</button>
+                  <button class="btn normal-case text-white bg-[#F85559] px-8 text-xl">Buy Now</button>
+                </div>
+              </form>
+            </dialog>
+          </div>
+        </div>
+        <div class="card bg-base-100 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit7.png" alt="Orange" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
+            <p class="text-slate-500 my-3">Orange</p>
+            <div class="rating">
+              <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
+              <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+            </div>
+            <!-- You can open the modal using ID.showModal() method -->
+            <button class="text-[#F85559] mt-4" onclick="my_modal_5.showModal()">Details</button>
+            <dialog id="my_modal_5" class="modal">
+              <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
+                <div class="flex justify-center"><img src="images/fruit7.png" alt="" class=""></div>
+                <h3 class="font-black my-5 text-black text-4xl">Orange</h3>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
+                  <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                </div>
+                <div class="modal-action justify-center">
+                  <!-- if there is a button, it will close the modal -->
+                  <button class="btn normal-case px-8 text-xl text-[#F85559] border-[#F85559]">Close</button>
+                  <button class="btn normal-case text-white bg-[#F85559] px-8 text-xl">Buy Now</button>
+                </div>
+              </form>
+            </dialog>
+          </div>
+        </div>
+        <div class="card bg-base-100 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
+            <p class="text-slate-500 my-3">Red Dragon</p>
+            <div class="rating">
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+            </div>
+            <!-- You can open the modal using ID.showModal() method -->
+            <button class="text-[#F85559] mt-4" onclick="my_modal_6.showModal()">Details</button>
+            <dialog id="my_modal_6" class="modal">
+              <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
+                <div class="flex justify-center"><img src="images/fruit8.png" alt="" class=""></div>
+                <h3 class="font-black my-5 text-black text-4xl">Red Dragon</h3>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
+                  <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                </div>
+                <div class="modal-action justify-center">
+                  <!-- if there is a button, it will close the modal -->
+                  <button class="btn normal-case px-8 text-xl text-[#F85559] border-[#F85559]">Close</button>
+                  <button class="btn normal-case text-white bg-[#F85559] px-8 text-xl">Buy Now</button>
+                </div>
+              </form>
+            </dialog>
+          </div>
+        </div>
+        <div class="card bg-base-100 shadow-xl">
+          <figure class="px-10 pt-10">
+            <img src="/images/fruit9.png" alt="Banana" class="rounded-xl" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
+            <p class="text-slate-500 my-3">Banana</p>
+            <div class="rating">
+              <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" checked />
+              <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+              <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+            </div>
+            <!-- You can open the modal using ID.showModal() method -->
+            <button class="text-[#F85559] mt-4" onclick="my_modal_7.showModal()">Details</button>
+            <dialog id="my_modal_7" class="modal">
+              <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
+                <div class="flex justify-center"><img src="images/fruit9.png" alt="" class=""></div>
+                <h3 class="font-black my-5 text-black text-4xl">Banana</h3>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <div class="rating">
+                  <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" checked />
+                  <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                  <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
+                </div>
+                <div class="modal-action justify-center">
+                  <!-- if there is a button, it will close the modal -->
+                  <button class="btn normal-case px-8 text-xl text-[#F85559] border-[#F85559]">Close</button>
+                  <button class="btn normal-case text-white bg-[#F85559] px-8 text-xl">Buy Now</button>
+                </div>
+              </form>
+            </dialog>
+          </div>
+        </div>
+      </div>
+      <div class="text-center m-12">
+        <button class=" text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-8 pt-5 pb-5 rounded-lg">Shop All</button>
+      </div>
     </section>
+
+
 
   </main>
 
