--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/15073e9c27.js" crossorigin="anonymous"></script>
@@ -182,7 +182,8 @@
   <main class="container mx-auto lato">
     <!-- Deal of the day section -->
     <section>
-      <div class="mt-6 lg:mt-48 lg:mb-12 flex flex-col lg:flex-row justify-between items-center text-center lg:text-left">
+      <div
+        class="mt-6  lg:mt-48 lg:mb-12 flex flex-col lg:flex-row justify-between items-center text-center lg:text-left">
         <div>
           <h4 class="text-black text-2xl md:text-5xl font-extrabold mb-3">Deal of the day</h4>
           <p class="text-slate-500 text-sm md:text-base w-64 md:w-96 lg:w-[600px] mb-3">
@@ -225,7 +226,7 @@
 
 
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 md:gap-5 lg:grid-cols-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5 lg:grid-cols-4">
         <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="/images/fruit6.png" alt="Apples" class="rounded-xl" />
@@ -246,7 +247,8 @@
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit6.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Apples</h3>
-                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
+                  and fresh fruits.</p>
                 <div class="rating">
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -283,7 +285,8 @@
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit7.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Orange</h3>
-                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
+                  and fresh fruits.</p>
                 <div class="rating">
                   <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -320,7 +323,8 @@
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit8.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Red Dragon</h3>
-                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
+                  and fresh fruits.</p>
                 <div class="rating">
                   <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -357,7 +361,8 @@
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit9.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Banana</h3>
-                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
+                <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
+                  and fresh fruits.</p>
                 <div class="rating">
                   <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
                   <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" checked />
@@ -376,10 +381,68 @@
         </div>
       </div>
       <div class="text-center m-12">
-        <button class=" text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-8 pt-5 pb-5 rounded-lg">Shop All</button>
+        <button
+          class=" text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-8 pt-5 pb-5 rounded-lg">Shop
+          All</button>
       </div>
     </section>
 
+    <!-- Meet the team section -->
+    <section class="my-6 lg:my-32">
+      <div class="hero min-h-[690px]" style="background-image: url('./images/team.png');">
+        <div class="hero-overlay bg-opacity-60 bg-[#121212]"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div>
+            <h1 class="mb-6 pt-6 text-5xl text-white font-black">Meet the team section</h1>
+            <p class="mb-12 text-white max-w-[615px] mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            <div class="grid gap-10 lg:gap-32 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pb-6">
+              <div>
+                <img src="images/member1.png" alt="" class="mb-7 mx-auto">
+                <h4 class="text-white text2xl font-bold text-center">Awlad Hossain</h4>
+                <p class="mt-1 mb-4">Fruits Expert</p>
+                <div class="flex gap-3 justify-center mt-3">
+                  <i class="fa-brands fa-square-facebook fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-square-twitter fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin fa-xl text-[#F85559]"></i>
+                </div>
+              </div>
+              <div>
+                <img src="images/member2.png" alt="" class="mb-7 mx-auto">
+                <h4 class="text-white text2xl font-bold text-center">Safia Chowdhury</h4>
+                <p class="mt-1 mb-4">Fruits Expert</p>
+                <div class="flex gap-3 justify-center mt-3">
+                  <i class="fa-brands fa-square-facebook fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-square-twitter fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin fa-xl text-[#F85559]"></i>
+                </div>
+              </div>
+              <div>
+                <img src="images/member3.png" alt="" class="mb-7 mx-auto">
+                <h4 class="text-white text2xl font-bold text-center">Rokib Hossain</h4>
+                <p class="mt-1 mb-4">Fruits Expert</p>
+                <div class="flex gap-3 justify-center mt-3">
+                  <i class="fa-brands fa-square-facebook fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-square-twitter fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin fa-xl text-[#F85559]"></i>
+                </div>
+              </div>
+              <div>
+                <img src="images/member4.png" alt="" class="mb-7 mx-auto">
+                <h4 class="text-white text2xl font-bold text-center">Chaity</h4>
+                <p class="mt-1 mb-4">Fruits Expert</p>
+                <div class="flex gap-3 justify-center mt-3">
+                  <i class="fa-brands fa-square-facebook fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-square-twitter fa-xl text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin fa-xl text-[#F85559]"></i>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
 
 
   </main>
