--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <div class="hero-overlay bg-opacity-60 bg-black"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
-                <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="mb-6">We supply highly quality organic products</p>
+                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                <p class="text-xs mb-6">We supply highly quality organic products</p>
                 <button
-                  class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop
+                  class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
               </div>
             </div>
@@ -103,10 +103,10 @@
             <div class="hero-overlay bg-opacity-60 bg-black"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
-                <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="mb-6">We supply highly quality organic products</p>
+                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                <p class="text-xs mb-6">We supply highly quality organic products</p>
                 <button
-                  class="text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case px-8 py-5 rounded-lg  hover:bg-red-500">Shop
+                  class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
               </div>
             </div>
@@ -121,10 +121,10 @@
             <div class="hero-overlay bg-opacity-60 bg-black"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
-                <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="mb-6">We supply highly quality organic products</p>
+                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                <p class="text-xs mb-6">We supply highly quality organic products</p>
                 <button
-                  class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop
+                  class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
               </div>
             </div>
@@ -139,10 +139,10 @@
             <div class="hero-overlay bg-opacity-60 bg-black"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
-                <h1 class="mb-5 text-2xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="mb-6">We supply highly quality organic products</p>
+                <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
+                <p class="text-xs mb-6">We supply highly quality organic products</p>
                 <button
-                  class="btn text-xl border-0 text-white bg-[#F85559] font-extrabold normal-case py-2 px-8 hover:bg-red-500">Shop
+                  class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
               </div>
             </div>
@@ -242,7 +242,7 @@
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
             </div>
             <!-- You can open the modal using ID.showModal() method -->
-            <button class="text-[#F85559] mt-4" onclick="my_modal_4.showModal()">Details</button>
+            <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_4.showModal()">Details</button>
             <dialog id="my_modal_4" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit6.png" alt="" class=""></div>
@@ -280,7 +280,7 @@
               <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
             </div>
             <!-- You can open the modal using ID.showModal() method -->
-            <button class="text-[#F85559] mt-4" onclick="my_modal_5.showModal()">Details</button>
+            <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_5.showModal()">Details</button>
             <dialog id="my_modal_5" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit7.png" alt="" class=""></div>
@@ -318,7 +318,7 @@
               <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
             </div>
             <!-- You can open the modal using ID.showModal() method -->
-            <button class="text-[#F85559] mt-4" onclick="my_modal_6.showModal()">Details</button>
+            <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_6.showModal()">Details</button>
             <dialog id="my_modal_6" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit8.png" alt="" class=""></div>
@@ -356,7 +356,7 @@
               <input type="radio" name="rating-5" class="mask mask-star-2 bg-[#F85559]" />
             </div>
             <!-- You can open the modal using ID.showModal() method -->
-            <button class="text-[#F85559] mt-4" onclick="my_modal_7.showModal()">Details</button>
+            <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_7.showModal()">Details</button>
             <dialog id="my_modal_7" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
                 <div class="flex justify-center"><img src="images/fruit9.png" alt="" class=""></div>
@@ -394,7 +394,8 @@
         <div class="hero-content text-center text-neutral-content">
           <div>
             <h1 class="mb-6 pt-6 text-5xl text-white font-black">Meet the team section</h1>
-            <p class="mb-12 text-white max-w-[615px] mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            <p class="mb-12 text-white max-w-[615px] mx-auto">Contrary to popular belief, is not simply random text. It
+              has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             <div class="grid gap-10 lg:gap-32 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pb-6">
               <div>
                 <img src="images/member1.png" alt="" class="mb-7 mx-auto">
@@ -444,12 +445,46 @@
 
     </section>
 
+    <!-- Why Choose Us section -->
+    <!-- <section>
+      <div>
+        <h4 class="text-black text-5xl font-black text-center">Why Choose Us</h4>
+        <p class="text-slate-500 text-center w-[615px] mx-auto mt-6 mb-12">Contrary to popular belief, is not simply
+          random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+        </p>
+      </div>
+      
+
+
+    </section> -->
 
   </main>
 
-  <footer>
+  <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded bg-[#121212] text-white lato">
+    <div class="flex gap-4 pt-24">
+      <img src="images/logo.png" alt="">
+      <h2 class="text-2xl md:text-5xl font-bold text-right">Fruit Burst</h2>
+    </div>
 
-
+    <div class="flex text-base flex-wrap justify-center gap-8 md:gap-14 my-14 md:text-lg font-semibold">
+      <a class="link link-hover">Home</a> 
+      <a class="link link-hover">About Us</a> 
+      <a class="link link-hover">Shop</a> 
+      <a class="link link-hover">All Fruits</a> 
+      <a class="link link-hover">Support</a>
+      <a class="link link-hover">My Account</a>
+    </div> 
+    <div>
+      <div class="flex justify-center pb-24 gap-5 md:gap-10 text-2xl">
+        <a><i class="fa-brands fa-twitter fa-lg md:fa-2xl"></i></a> 
+        <a><i class="fa-brands fa-facebook fa-lg md:fa-2xl"></i></a> 
+        <a><i class="fa-brands fa-youtube fa-lg md:fa-2xl"></i></a>
+        <a><i class="fa-brands fa-linkedin fa-lg md:fa-2xl"></i></a>
+        <a><i class="fa-brands fa-instagram fa-lg md:fa-2xl"></i></a>
+        <a><i class="fa-brands fa-apple fa-lg md:fa-2xl"></i></a>
+      </div>
+    </div> 
+    
   </footer>
 </body>
 
