--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
                 <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="text-xs mb-6">We supply highly quality organic products</p>
+                <p class="text-xs md:text-xl mb-6">We supply highly quality organic products</p>
                 <button
                   class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
@@ -104,7 +104,7 @@
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
                 <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="text-xs mb-6">We supply highly quality organic products</p>
+                <p class="text-xs md:text-xl mb-6">We supply highly quality organic products</p>
                 <button
                   class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
@@ -122,7 +122,7 @@
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
                 <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="text-xs mb-6">We supply highly quality organic products</p>
+                <p class="text-xs md:text-xl mb-6">We supply highly quality organic products</p>
                 <button
                   class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
@@ -140,7 +140,7 @@
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-2xl lg:-mt-24">
                 <h1 class="mb-5 text-3xl md:text-7xl font-extrabold text-white">Exotic tastes at your doorstep</h1>
-                <p class="text-xs mb-6">We supply highly quality organic products</p>
+                <p class="text-xs md:text-xl mb-6">We supply highly quality organic products</p>
                 <button
                   class="text-white font-black text-xl bg-[#F85559] hover:bg-red-500 normal-case px-4 md:px-8 pt-2 md:pt-5 pb-2 md:pb-5 rounded-lg">Shop
                   Now</button>
