added why choose us section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="navbar-start hidden md:flex">
-          <ul class="menu menu-horizontal px-1 text-black md:text-white text-lg font-medium">
+          <ul class="menu menu-horizontal px-1 text-black md:text-white text-sm md:mx-auto lg:mx-0 font-medium">
             <li><a>Home</a></li>
             <li><a>About Us</a></li>
             <li><a>Shop</a></li>
@@ -446,18 +446,83 @@
     </section>
 
     <!-- Why Choose Us section -->
-    <!-- <section>
+    <section class="my-6 lg:my-32">
       <div>
-        <h4 class="text-black text-5xl font-black text-center">Why Choose Us</h4>
-        <p class="text-slate-500 text-center w-[615px] mx-auto mt-6 mb-12">Contrary to popular belief, is not simply
+        <h4 class="text-black text-xl md:text-5xl font-black text-center">Why Choose Us</h4>
+        <p class="text-slate-500 text-center w-[275px] md:w-[615px] mx-auto mt-6 mb-12">Contrary to popular belief, is not simply
           random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
         </p>
       </div>
-      
-
-
-    </section> -->
-
+      <div class="flex gap-12 flex-col lg:flex-row justify-between">
+        <div class="order-2 lg:order-1">
+          <div class="flex gap-4 flex-col lg:flex-row">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/group 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-left text-xl font-black">Dedicated Team</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-left mx-16 lg:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex gap-4 flex-col lg:flex-row">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/love 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-left text-xl font-black">Fresh is Best</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-left mx-16 lg:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex gap-4 flex-col lg:flex-row">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/gift-box 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-left text-xl font-black">Gift Certificates</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-left mx-16 lg:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+        </div>
+        <div class=" order-1 lg:order-2">
+          <img src="images/whychoose1.png" alt="" class="h-[300px] md:h-[415px] w-[335px] md:w-[465px] mx-auto">
+        </div>
+        <div class="order-3">
+          <div class="flex gap-4 flex-col lg:flex-row-reverse">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/fruit 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-right text-xl font-black">Integrated Supplier</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0 lg:ml-auto">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-right mx-16 md:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex gap-4 flex-col lg:flex-row-reverse">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/ice-cream 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-right text-xl font-black">Sustainable Practice</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0 lg:ml-auto">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-right mx-16 md:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+          <div class="flex gap-4 flex-col lg:flex-row-reverse">
+            <div class="w-14 h-14 bg-slate-200 rounded-full flex items-center justify-center mx-auto">
+              <img src="images/icon/like 1.svg" alt="" class="">
+            </div>
+            <div>
+              <h4 class="text-center mx-auto lg:text-right text-xl font-black">The Benefits Only</h4>
+              <hr class="w-24 mt-5 mb-4 mx-auto lg:mx-0 lg:ml-auto">
+              <p class="text-slate-500 mb-10 text-sm text-center lg:text-right mx-16 md:mx-0">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded bg-[#121212] text-white lato">
