--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-5 lg:grid-cols-4">
         <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit6.png" alt="Apples" class="rounded-xl" />
+            <img src="./images/fruit6.png" alt="Apples" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
@@ -245,7 +245,7 @@
             <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_4.showModal()">Details</button>
             <dialog id="my_modal_4" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
-                <div class="flex justify-center"><img src="images/fruit6.png" alt="" class=""></div>
+                <div class="flex justify-center"><img src="./images/fruit6.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Apples</h3>
                 <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
                   and fresh fruits.</p>
@@ -267,7 +267,7 @@
         </div>
         <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit7.png" alt="Orange" class="rounded-xl" />
+            <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
@@ -283,7 +283,7 @@
             <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_5.showModal()">Details</button>
             <dialog id="my_modal_5" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
-                <div class="flex justify-center"><img src="images/fruit7.png" alt="" class=""></div>
+                <div class="flex justify-center"><img src="./images/fruit7.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Orange</h3>
                 <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
                   and fresh fruits.</p>
@@ -305,7 +305,7 @@
         </div>
         <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+            <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
@@ -321,7 +321,7 @@
             <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_6.showModal()">Details</button>
             <dialog id="my_modal_6" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
-                <div class="flex justify-center"><img src="images/fruit8.png" alt="" class=""></div>
+                <div class="flex justify-center"><img src="./images/fruit8.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Red Dragon</h3>
                 <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
                   and fresh fruits.</p>
@@ -343,7 +343,7 @@
         </div>
         <div class="card bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit9.png" alt="Banana" class="rounded-xl" />
+            <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title mt-5 text-2xl font-bold border-b-2 py-5 px-8">12.90$ - 18.85$</h2>
@@ -359,7 +359,7 @@
             <button class="text-[#F85559] mt-4 text-lg font-bold" onclick="my_modal_7.showModal()">Details</button>
             <dialog id="my_modal_7" class="modal">
               <form method="dialog" class="modal-box md:w-2/3 lg:w-1/3 max-w-5xl">
-                <div class="flex justify-center"><img src="images/fruit9.png" alt="" class=""></div>
+                <div class="flex justify-center"><img src="./images/fruit9.png" alt="" class=""></div>
                 <h3 class="font-black my-5 text-black text-4xl">Banana</h3>
                 <p class="py-4 text-slate-500">Professional employees are there for you to pick the most <br> amazing
                   and fresh fruits.</p>
